# intelligence

./: .gitignore  .repo_ignore  Dockerfile  Procfile  README  README.md  benchmark_config.py  bun.lockb  crawl.py  edits.ts  index.ts  monitor.ts  package-lock.json  package.json  process.py  pyproject.toml  start.sh  tsconfig.json  wiki.py
.github/workflows/: deploy.yml  main.yml
ai/: pyproject.toml
config/: deployment.yml
data/: .env  Dockerfile.worker  README.md  edits.py  edits.test.ts  edits.ts  index.js  package-lock.json  package.json  pyproject.toml  worker.toml
data/lib/: simpletext.js
data/workers/: Dockerfile.worker  wiki-edits.py  worker.toml
engine/: .dockerignore  .env.example  Dockerfile  analytics.go  go.mod  railway.toml  spikes.go  stats.go  store.go  stream.go
engine/analytics/: spikes.go
engine/cmd/: main.go
notes/: deployments.md  todo.md
prisma/: schema.prisma
public/: index.html
scripts/: prepare_kubeconfig.sh
server/: Dockerfile  bun.lockb  index.js  index.test.ts  index.ts  package-lock.json  package.json  server.js  server.ts  tsconfig.json
server/data/: edits.ts  wiki-edits.ts
server/prisma/: schema.prisma
server/routes/: edits.ts  wiki.js  wiki.ts
server/workers/: wiki-edits.js
src/: .dockerignore  Dockerfile  Makefile  bun.lockb  index.test.ts  index.ts  jest.config.js  package-lock.json  package.json  server.ts  tsconfig.json
src/prisma/: schema.prisma
src/routes/: edits.ts
viz/: pyproject.toml  viz.py
web/: bun.lockb  package-lock.json  package.json
web/app/: page.tsx
web/app/components/: spikes.tsx
