[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Tanmai Kalisipudi <tanmai.kalisipudi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
networkx = "^3.4.2"
flask = "^3.1.0"
aiohttp = "^3.11.10"
asyncio = "^3.4.3"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
socketio = "^0.2.1"
python-socketio = {extras = ["client"], version = "^5.11.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
