[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Tanmai Kalisipudi <tanmai.kalisipudi@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
newspaper3k = "^0.2.8"
sseclient = "^0.0.27"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
