[tool.poetry]
name = "viz"
version = "0.1.0"
description = ""
authors = ["Tanmai Kalisipudi <tanmai.kalisipudi@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
matplotlib = "^3.10.0"
dash = "2.11.0"
plotly = "^5.24.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
